--- a/k8s/demo/deployment-real-app.yaml
+++ b/k8s/demo/deployment-real-app.yaml
@@ -18,3 +18,22 @@ spec:
           image: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app:latest
           ports:
             - containerPort: 3000
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "250m"
+              memory: "256Mi"
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 3000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 3000
+            initialDelaySeconds: 15
+            periodSeconds: 20
