Use immutable image tags (SHA) for CI deploy to EKS

--- a/.github/workflows/app-build-scan-deploy.yml
+++ b/.github/workflows/app-build-scan-deploy.yml
@@ -1,13 +1,13 @@
-name: app-build-scan-deploy
+name: App CI - Build, Scan, Push, Deploy
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
     paths:
       - "app/**"
       - "k8s/**"
       - ".github/workflows/app-build-scan-deploy.yml"
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 permissions:
   id-token: write
@@ -15,63 +15,80 @@ permissions:
 
 env:
   AWS_REGION: eu-north-1
-  AWS_ACCOUNT_ID: 057773388128
-  ECR_REPOSITORY: eks-real-app
-  EKS_CLUSTER_NAME: eks-portfolio-dev
+  ECR_REGISTRY: 057773388128.dkr.ecr.eu-north-1.amazonaws.com
+  ECR_REPO: eks-real-app
+  CLUSTER_NAME: eks-portfolio-dev
   K8S_NAMESPACE: demo
+  K8S_DEPLOYMENT: real-app
+  K8S_CONTAINER: app
 
 jobs:
-  build_scan_deploy:
+  build_scan_push_deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials (OIDC)
+      - name: Configure AWS (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::057773388128:role/github-actions-eks-terraform
-          aws-region: eu-north-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: Set image tag (short SHA)
+        run: echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
       - name: Build Docker image
         run: |
-          IMAGE_URI="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:${GITHUB_SHA}"
-          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
-          docker build -t "$IMAGE_URI" ./app
+          docker build \
+            -t $ECR_REGISTRY/$ECR_REPO:${IMAGE_TAG} \
+            -t $ECR_REGISTRY/$ECR_REPO:latest \
+            app
 
-      - name: Trivy scan (image)
+      - name: Trivy scan (fail on HIGH/CRITICAL)
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: ${{ env.IMAGE_URI }}
+          image-ref: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPO }}:${{ env.IMAGE_TAG }}
           format: table
           exit-code: "1"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
+          severity: "HIGH,CRITICAL"
 
       - name: Push image to ECR
         run: |
-          docker push "${IMAGE_URI}"
+          docker push $ECR_REGISTRY/$ECR_REPO:${IMAGE_TAG}
+          docker push $ECR_REGISTRY/$ECR_REPO:latest
+
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v4
+        with:
+          version: v1.29.0
 
       - name: Update kubeconfig
         run: |
-          aws eks update-kubeconfig --region "${AWS_REGION}" --name "${EKS_CLUSTER_NAME}"
+          aws eks update-kubeconfig \
+            --region $AWS_REGION \
+            --name $CLUSTER_NAME
 
-      - name: Deploy manifests (patch image tag)
+      - name: Apply manifests (namespace/service/ingress)
         run: |
-          mkdir -p /tmp/k8s
-          cp -r k8s/demo/* /tmp/k8s/
+          kubectl apply -f k8s/demo/namespace.yaml
+          kubectl apply -f k8s/demo/service-real-app.yaml
+          kubectl apply -f k8s/demo/ingress-real-app.yaml
 
-          # Patch the image tag inside the deployment
-          sed -i "s|:REPLACEME|:${GITHUB_SHA}|g" /tmp/k8s/deployment-real-app.yaml
-
-          kubectl apply -f /tmp/k8s/
-
-      - name: Rollout status
+      - name: Deploy new image (set image to SHA tag)
         run: |
-          kubectl -n "${K8S_NAMESPACE}" rollout status deploy/real-app --timeout=180s
-          kubectl -n "${K8S_NAMESPACE}" get pods -l app=real-app -o wide
+          kubectl -n $K8S_NAMESPACE set image deployment/$K8S_DEPLOYMENT \
+            $K8S_CONTAINER=$ECR_REGISTRY/$ECR_REPO:${IMAGE_TAG}
+
+      - name: Wait for rollout
+        run: |
+          kubectl -n $K8S_NAMESPACE rollout status deployment/$K8S_DEPLOYMENT --timeout=180s
+
+      - name: Show deployed image
+        run: |
+          kubectl -n $K8S_NAMESPACE get deploy $K8S_DEPLOYMENT \
+            -o jsonpath='{.spec.template.spec.containers[0].image}{"\n"}'
