--- a/k8s/demo/deployment-real-app.yaml
+++ b/k8s/demo/deployment-real-app.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app:REPLACEME
+          image: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app:__CI_SHA__
           ports:
             - containerPort: 3000
           resources:
