--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,10 +2,11 @@ FROM node:22-alpine
 
 WORKDIR /app
 
-# Update npm so transitive npm deps like cross-spawn/glob/tar are pulled at patched versions
-RUN npm install -g npm@latest
+# Keep npm up to date, then force tar to the patched version
+RUN npm install -g npm@latest \
+ && npm install -g tar@7.5.3 \
+ && npm cache clean --force
 
-# Copy app code (no dependencies needed for this simple HTTP server)
 COPY server.js ./server.js
 COPY package.json ./package.json
 
