--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,11 @@
 {
   "name": "eks-real-app",
   "version": "1.0.0",
+  "description": "Simple Node HTTP service for EKS deployment",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
-  }
+  },
+  "dependencies": {}
 }
