--- a/.github/workflows/app-build-scan-deploy.yml
+++ b/.github/workflows/app-build-scan-deploy.yml
@@ -1,4 +1,4 @@
-name: "App: build, scan, push, deploy"
+name: App build scan push deploy
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
       - "app/**"
       - "k8s/**"
       - ".github/workflows/app-build-scan-deploy.yml"
+  workflow_dispatch:
 
 permissions:
   id-token: write
@@ -30,8 +31,8 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::057773388128:role/github-actions-eks-terraform
           aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: arn:aws:iam::057773388128:role/github-actions-eks-terraform
 
       - name: Login to Amazon ECR
         id: ecr-login
@@ -40,36 +41,43 @@ jobs:
       - name: Set image tag
         id: vars
         run: |
-          echo "image_tag=${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
+          echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+          echo "ECR_REGISTRY=${{ steps.ecr-login.outputs.registry }}" >> $GITHUB_OUTPUT
 
-      - name: Build Docker image (with Git SHA build-arg)
-        env:
-          ECR_REGISTRY: ${{ steps.ecr-login.outputs.registry }}
-          IMAGE_TAG: ${{ steps.vars.outputs.image_tag }}
-        run: |
-          docker build \
-            --build-arg GIT_SHA=${GITHUB_SHA::7} \
-            -t "$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG" \
-            -t "$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest" \
-            app
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Trivy image scan (fail on HIGH/CRITICAL)
-        uses: aquasecurity/trivy-action@0.24.0
+      - name: Build image (no cache)
+        uses: docker/build-push-action@v6
         with:
-          image-ref: ${{ steps.ecr-login.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.image_tag }}
+          context: ./app
+          file: ./app/Dockerfile
+          push: false
+          no-cache: true
+          tags: |
+            ${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}
+
+      - name: Sanity check package.json inside image
+        run: |
+          IMAGE="${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}"
+          echo "Printing /app/package.json from built image: $IMAGE"
+          docker run --rm "$IMAGE" sh -lc 'pwd; ls -la; echo "-----"; cat /app/package.json'
+
+      - name: Trivy scan image (HIGH/CRITICAL)
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: ${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}
           format: table
           exit-code: "1"
           ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "HIGH,CRITICAL"
+          vuln-type: os,library
+          severity: HIGH,CRITICAL
+          scanners: vuln
 
       - name: Push image to ECR
-        env:
-          ECR_REGISTRY: ${{ steps.ecr-login.outputs.registry }}
-          IMAGE_TAG: ${{ steps.vars.outputs.image_tag }}
         run: |
-          docker push "$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG"
-          docker push "$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest"
+          IMAGE="${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}"
+          docker push "$IMAGE"
 
       - name: Update kubeconfig
         run: |
@@ -77,16 +85,8 @@ jobs:
             --region "${{ env.AWS_REGION }}" \
             --name "${{ env.CLUSTER_NAME }}"
 
-      - name: Apply Kubernetes manifests
+      - name: Deploy (set image + rollout)
         run: |
-          kubectl apply -f k8s/demo/
-
-      - name: Rollout restart to pull new image
-        run: |
-          kubectl -n "${{ env.K8S_NAMESPACE }}" rollout restart deploy/"${{ env.DEPLOYMENT_NAME }}"
-          kubectl -n "${{ env.K8S_NAMESPACE }}" rollout status deploy/"${{ env.DEPLOYMENT_NAME }}" --timeout=300s
-
-      - name: Show current image + pods
-        run: |
-          kubectl -n "${{ env.K8S_NAMESPACE }}" get deploy/"${{ env.DEPLOYMENT_NAME }}" -o=jsonpath='{.spec.template.spec.containers[0].image}{"\n"}'
-          kubectl -n "${{ env.K8S_NAMESPACE }}" get pods -l app="${{ env.DEPLOYMENT_NAME }}" -o wide
+          IMAGE="${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}"
+          kubectl -n "${{ env.K8S_NAMESPACE }}" set image deployment/"${{ env.DEPLOYMENT_NAME }}" app="$IMAGE"
+          kubectl -n "${{ env.K8S_NAMESPACE }}" rollout status deployment/"${{ env.DEPLOYMENT_NAME }}" --timeout=180s
