--- a/.github/workflows/app-build-scan-deploy.yml
+++ b/.github/workflows/app-build-scan-deploy.yml
@@ -1,4 +1,4 @@
-name: App build scan push deploy
+name: App build, scan, push, deploy
 
 on:
   push:
@@ -19,6 +19,7 @@ env:
   ECR_REPOSITORY: eks-real-app
   K8S_NAMESPACE: demo
   DEPLOYMENT_NAME: real-app
+  CONTAINER_NAME: app
 
 jobs:
   build_scan_push_deploy:
@@ -34,59 +35,54 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
           role-to-assume: arn:aws:iam::057773388128:role/github-actions-eks-terraform
 
-      - name: Login to Amazon ECR
-        id: ecr-login
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Set image tag
+      - name: Set image vars
         id: vars
         run: |
-          echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
-          echo "ECR_REGISTRY=${{ steps.ecr-login.outputs.registry }}" >> $GITHUB_OUTPUT
+          echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+          echo "ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)" >> $GITHUB_ENV
+          echo "ECR_REGISTRY=$(aws sts get-caller-identity --query Account --output text).dkr.ecr.${AWS_REGION}.amazonaws.com" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+          echo "IMAGE_URI=$(aws sts get-caller-identity --query Account --output text).dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPOSITORY}:${GITHUB_SHA::7}" >> $GITHUB_ENV
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build image (no cache)
-        uses: docker/build-push-action@v6
-        with:
-          context: ./app
-          file: ./app/Dockerfile
-          push: false
-          no-cache: true
-          tags: |
-            ${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}
-
-      - name: Sanity check package.json inside image
+      - name: Build image (local)
         run: |
-          IMAGE="${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}"
-          echo "Printing /app/package.json from built image: $IMAGE"
-          docker run --rm "$IMAGE" sh -lc 'pwd; ls -la; echo "-----"; cat /app/package.json'
+          docker build -t "${IMAGE_URI}" ./app
 
-      - name: Trivy scan image (HIGH/CRITICAL)
-        uses: aquasecurity/trivy-action@0.28.0
+      - name: Print package.json from built image (local)
+        run: |
+          echo "Printing /app/package.json from locally-built image: ${IMAGE_URI}"
+          docker run --rm "${IMAGE_URI}" cat /app/package.json
+
+      - name: Trivy scan image (fail on HIGH/CRITICAL)
+        uses: aquasecurity/trivy-action@0.30.0
         with:
-          image-ref: ${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}
+          image-ref: ${{ env.IMAGE_URI }}
           format: table
           exit-code: "1"
           ignore-unfixed: true
-          vuln-type: os,library
-          severity: HIGH,CRITICAL
-          scanners: vuln
+          vuln-type: "os,library"
+          severity: "HIGH,CRITICAL"
+          scanners: "vuln"
+
+      - name: Login to Amazon ECR
+        run: |
+          aws ecr get-login-password --region "${AWS_REGION}" \
+            | docker login --username AWS --password-stdin "${ECR_REGISTRY}"
 
       - name: Push image to ECR
         run: |
-          IMAGE="${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}"
-          docker push "$IMAGE"
+          docker push "${IMAGE_URI}"
 
       - name: Update kubeconfig
         run: |
-          aws eks update-kubeconfig \
-            --region "${{ env.AWS_REGION }}" \
-            --name "${{ env.CLUSTER_NAME }}"
+          aws eks update-kubeconfig --region "${AWS_REGION}" --name "${CLUSTER_NAME}"
 
       - name: Deploy (set image + rollout)
         run: |
-          IMAGE="${{ steps.vars.outputs.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ steps.vars.outputs.IMAGE_TAG }}"
-          kubectl -n "${{ env.K8S_NAMESPACE }}" set image deployment/"${{ env.DEPLOYMENT_NAME }}" app="$IMAGE"
-          kubectl -n "${{ env.K8S_NAMESPACE }}" rollout status deployment/"${{ env.DEPLOYMENT_NAME }}" --timeout=180s
+          kubectl -n "${K8S_NAMESPACE}" set image deployment/"${DEPLOYMENT_NAME}" "${CONTAINER_NAME}"="${IMAGE_URI}"
+          kubectl -n "${K8S_NAMESPACE}" rollout status deployment/"${DEPLOYMENT_NAME}"
+
+      - name: Summary
+        run: |
+          echo "Deployed image: ${IMAGE_URI}" >> $GITHUB_STEP_SUMMARY
+          echo "Endpoint: https://app.mhecsproject.com/version" >> $GITHUB_STEP_SUMMARY
