--- a/k8s/demo/gitops/real-app/kustomization.yaml
+++ b/k8s/demo/gitops/real-app/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
 
 images:
   - name: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app
-    newTag: latest
+    newTag: 3cb82f4
