--- a/k8s/demo/gitops/real-app/kustomization.yaml
+++ b/k8s/demo/gitops/real-app/kustomization.yaml
@@ -10,4 +10,5 @@ resources:
 
 images:
   - name: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app
-    newTag: 3cb82f4
+    newName: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app
+    newTag: f1b4fff
