feat: add Prometheus /metrics endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ github-actions-terraform-trust.json
 # Local kube / helm caches
 **/.kube/
 **/.helm/
+
+# Node
+app/node_modules/
+app/package-lock.json
+
+# Local helm/k8s working dirs if you don't want to commit them
+# (REMOVE these two lines if you DO want them in GitOps)
+# helm/monitoring/
+# k8s/monitoring/
