--- a/k8s/demo/gitops/real-app/kustomization.yaml
+++ b/k8s/demo/gitops/real-app/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+  - servicemonitor.yaml
 
 images:
   - name: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app
     newName: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app
-    newTag: c688bba
