--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,13 +1,25 @@
-FROM node:22-alpine
+# ---------- builder ----------
+FROM node:22-alpine AS builder
+WORKDIR /app
 
+# Install deps (use lockfile for reproducible builds)
+COPY package.json package-lock.json ./
+RUN npm ci --omit=dev
+
+# Copy app code
+COPY server.js ./server.js
+
+
+# ---------- runtime ----------
+FROM node:22-alpine
 WORKDIR /app
 
 # Copy only what we need to run
-COPY server.js ./server.js
-COPY package.json ./package.json
+COPY --from=builder /app/server.js ./server.js
+COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/node_modules ./node_modules
 
-# This app does NOT need npm at runtime.
-# Remove npm/npx/corepack and any global tar folders so Trivy doesn't find the vulnerable tar copy.
+# Optional hardening: remove npm/npx/corepack/tar so Trivy doesn't flag vulnerable copies
 RUN rm -rf /usr/local/lib/node_modules/npm \
            /usr/local/lib/node_modules/corepack \
            /usr/local/bin/npm \
@@ -18,3 +30,4 @@ RUN rm -rf /usr/local/lib/node_modules/npm \
 
 EXPOSE 3000
 CMD ["node", "server.js"]
+
