--- a/k8s/demo/gitops/real-app/kustomization.yaml
+++ b/k8s/demo/gitops/real-app/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
 images:
   - name: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app
     newName: 057773388128.dkr.ecr.eu-north-1.amazonaws.com/eks-real-app
-    e1ff4d
+    newTag: 0e1ff4d
