monitoring: enable ingress-nginx controller metrics export

--- a/k8s/ingress-nginx/values.yaml
+++ b/k8s/ingress-nginx/values.yaml
@@ -5,7 +5,8 @@ controller:
     service:
       enabled: true
       type: ClusterIP
-      servicePort: 10254
+      ports:
+        metrics: 10254
 
     serviceMonitor:
       enabled: true
