monitoring: enable ingress-nginx request metrics via extraArgs

--- a/k8s/ingress-nginx/values.yaml
+++ b/k8s/ingress-nginx/values.yaml
@@ -6,3 +6,7 @@ controller:
       namespace: monitoring
       additionalLabels:
         release: monitoring
+
+  # IMPORTANT: turn on the controller's request metrics
+  extraArgs:
+    enable-metrics: "true"
